2011-10-15  Richard Henderson  <rth@redhat.com>

	* tree-vect-slp.c: Include langhooks.h.
	(vect_create_mask_and_perm): Emit VEC_PERM_EXPR, not a builtin.
	(vect_transform_slp_perm_load): Use can_vec_perm_expr_p.  Simplify
	mask creation for VEC_PERM_EXPR.
	* tree-vect-stmts.c (perm_mask_for_reverse): Return the mask,
	not the builtin.
	(reverse_vec_elements): Emit VEC_PERM_EXPR not a builtin.
	* Makefile.in (tree-vect-slp.o): Update dependency.
	* optabs.c (can_vec_perm_expr_p): Allow NULL as unknown constant.

2011-10-15  Alan Modra  <amodra@gmail.com>

	PR bootstrap/50738
	* ifcvt.c (dead_or_predicable): Revert accidental commit with
	HAVE_simple_return test.

2011-10-15  Alan Modra  <amodra@gmail.com>

	* ifcvt.c (dead_or_predicable): Disable if-conversion when
	doing so is likely to kill a shrink-wrapping opportunity.

	PR rtl-optimization/49941
	* jump.c (mark_jump_label_1): Set JUMP_LABEL for simple_return jumps.

	* rtl.h (set_return_jump_label): Declare.
	* function.c (set_return_jump_label): New function, extracted..
	(thread_prologue_and_epilogue_insns): ..from here.  Use it in
	another instance to set return jump_label.
	* cfgrtl.c (force_nonfallthru_and_redirect): Use set_return_jump_label.
	* reorg.c (find_end_label): Likewise.

2011-10-14  David S. Miller  <davem@davemloft.net>

	* config/sparc/sol2.h: Protect -m{cpu,tune}=native handling
	with a more complete cpp test.
	* config/sparc/linux64.h: Likewise.
	* config/sparc/linux.h: Likewise.
	* config/sparc/sparc.opt (sparc_debug): New target variable.
	(mdebug): New target option.
	* config/sparc/sparc.h (MASK_DEBUG_OPTIONS, MASK_DEBUG_ALL,
	TARGET_DEBUG_OPTIONS): New defines.
	* config/sparc/sparc.c (debug_target_flag_bits,
	debug_target_flags): New functions.
	(sparc_option_override): Add name strings back to cpu_table[].
	Parse -mdebug string.  When TARGET_DEBUG_OPTIONS is true, print
	out the target flags before and after override processing as well